Sweep 3: Porting over Events and Data Components